--- a/project_2/project_2_SQL_LK.ipynb
+++ b/project_2/project_2_SQL_LK.ipynb
@@ -3121,7 +3121,7 @@
         "\n",
         "tables = pd.read_html(\n",
         "    'https://ru.wikipedia.org/wiki/%D0%93%D0%BE%D1%80%D0%BE%D0%B4%D0%B0-%D0%BC%D0%B8%D0%BB%D0%BB%D0%B8%D0%BE%D0%BD%D0%B5%D1%80%D1%8B_%D0%A0%D0%BE%D1%81%D1%81%D0%B8%D0%B8',\n",
-        "    encoding='latin1')\n",
+        "    encoding='utf-8')\n",
         "len(tables) # количество таблиц в статье\n",
         "\n",
         "temp_table = tables[1]\n",
